2008-06-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* doc/www.gnu.org/announce/20080606.wml,
	* doc/www.gnu.org/newsitems.txt:
	Add 0.97.2 annoncement.
	* NEWS: Add 0.97.1 and 0.97.2 updates.
	
2008-06-09  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (EXTRA_DIST): Add ChangeLog-2007.
	* doc/Makefile.am (EXTRA_DIST): Add invoke.texi.

2008-06-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/Integer.java:
	(parseInt(String, int, boolean)): Disallow "-+".
	
2008-06-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* tools/gnu/classpath/tools/common/ClasspathToolParser.java:
	Fixed indentation and changed to use OptionException.
	* tools/gnu/classpath/tools/getopt/OptionException.java:
	(OptionException(String,Throwable)): Added.

2008-06-03  Robert Schuster  <robertschuster@fsfe.org>

	* tools/gnu/classpath/tools/jar/Main.java:
	(run): Call different ClasspathToolParser.parse() variant.
	(getParser): Changed return type to ClasspathToolParser.
	* tools/gnu/classpath/tools/javah/GcjhMain.java:
	(getParser): Changed return type to ClasspathToolParser.
	* tools/gnu/classpath/tools/javah/Main.java:
	(getParser): Changed return type to ClasspathToolParser.
	* tools/gnu/classpath/tools/getopt/Parser.java: Make 'programName'
	protected.
	* tools/gnu/classpath/tools/common/ClasspathToolParser.java:
	(parse(String[], FileArgumentCallback,boolean): New method.
	(parse(String[], boolean): New method.
	(parseFileList): New method.
	(parseLine): New method.
	(AtFileArgumentCallback): New inner class.

2008-06-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* tools/gnu/classpath/tools/getopt/OptionException.java,
	* tools/gnu/classpath/tools/jar/Main.java:
	Revert previous changes to allow Schuster's patch to
	do the same.
	
2008-06-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* tools/gnu/classpath/tools/getopt/OptionException.java:
	(OptionException(String,Throwable)): New constructor.
	* tools/gnu/classpath/tools/jar/Main.java: