@@ -1,3 +1,11 @@
+2008-06-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am: Use default makedistcheck
+	flags that test all optional dependencies.
+	* include/Makefile.am: Add header files to dist.
+	* lib/Makefile.am: Trick class files into being
+	built for dist, so headers can be generated.
+
 2008-06-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* doc/www.gnu.org/announce/20080606.wml,
